--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "site-status",
-  "alia": "SiteStatus",
+  "name": "stats",
   "private": true,
-  "version": "1.2.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
