--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ant-design/plots": "^2.1.1",
     "@icon-park/react": "^1.4.2",
     "antd": "^5.12.2",
     "axios": "^1.6.2",
     "dayjs": "^1.11.10",
+    "echarts": "^5.4.3",
     "lodash": "^4.17.21",
     "mac-scrollbar": "^0.13.5",
     "mobx": "^6.12.0",
